--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -35,7 +35,7 @@
   padding: 15px;
   margin-top: 20px;
   text-align: center;
- 
+  width: auto;
 }
 .question-code span {
   color: rgb(252, 42, 42);
@@ -60,4 +60,15 @@ button {
 }
 button:hover {
   background-color: rgb(51, 124, 122);
+}
+
+.score-section {
+  text-align: center;
+  background-color: #8f062d;
+  /* background-color: rgb(51, 124, 122); */
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 35px;
 }
