--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -21,6 +21,7 @@
   font-size: 25px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin-bottom: 30px;
+  color: #ffffff;
 }
 
 .question-text {
@@ -29,6 +30,7 @@
   line-height: 150%;
   width: 100%;
   padding: 20px;
+  color: #ffffff;
 }
 .question-code {
   background-color: #252d4a;
@@ -57,6 +59,7 @@ button {
   padding: 10px;
   font-size: large;
   word-wrap: break-word;
+  color: #ffffff;
 }
 button:hover {
   background-color: rgb(51, 124, 122);
@@ -66,9 +69,55 @@ button:hover {
   text-align: center;
   background-color: #8f062d;
   /* background-color: rgb(51, 124, 122); */
+  color: #ffffff;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 35px;
+}
+
+@media screen and (max-width: 1000px) {
+  .app {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+  }
+  .question-section {
+    width: 100%;
+  }
+  .question-section span {
+    width: auto;
+    word-wrap: break-word;
+  }
+  .answer-section {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .app {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    height: 90vh;
+    width: 90vw;
+    padding: 10px;
+  }
+  .question-section {
+    width: 100%;
+    font-size: 14px;
+    padding: 0.3em;
+    margin-bottom: 20px;
+  }
+  .question-section span {
+    width: auto;
+    word-wrap: break-word;
+  }
+  .answer-section {
+    width: 100%;
+  }
 }
