--- a/src/components/jsQuiz/Question.css
+++ b/src/components/jsQuiz/Question.css
@@ -51,7 +51,7 @@
   align-items: center;
   gap: 10px;
 }
-button {
+.answer-section button {
   background-color: transparent;
   border: 1px solid rgb(51, 124, 122);
   border-radius: 0.5em;
@@ -61,7 +61,7 @@ button {
   word-wrap: break-word;
   color: #ffffff;
 }
-button:hover {
+.answer-section button:hover {
   background-color: rgb(51, 124, 122);
 }
 
@@ -101,7 +101,7 @@ button:hover {
   .app {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     height: 90vh;
     width: 90vw;
