--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 * {
   font-family: "Verdana", cursive, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 body {
-  display: flex;
+  /* display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100vh; */
 }
