--- a/src/components/HomePage/home.css
+++ b/src/components/HomePage/home.css
@@ -1,3 +1,30 @@
-.cards-container {
-
+.hero-section {
+  width: 70%;
+  display: grid;
+  grid-template-columns: 60% 30%;
+  justify-items: center;
+  align-items: center;
+  padding: 20px;
+  gap: 20px;
+  margin: 40px auto;
+  box-shadow: #ccd3ca 0px 3px 15px;
+  border-radius: 0.4rem;
+}
+.hero-content {
+  padding: 40px;
+  height: 400px;
+  color: #265073;
+}
+.hero-content h1 {
+  padding: 20px;
+  font-size: 44px;
+}
+.hero-content p {
+  padding: 20px;
+  font-size: 20px;
+}
+.hero-image img {
+  height: 400px;
+  border-radius: 50px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 15px;
 }
