--- a/src/components/card/cards.css
+++ b/src/components/card/cards.css
@@ -1,12 +1,25 @@
+.cards-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+.cards-section h2 {
+  color: #9fa89b;
+  text-decoration: underline solid 2px;
+  text-underline-offset: 15px;
+  margin-top: 80px;
+}
 .cards-container {
   display: grid;
   grid-template-columns: repeat(3, 400px);
-  background-color: #9ad0c2;
-  width: 100vw;
+  /* background-color: #ccd3ca; */
+  width: 90%;
   min-height: auto;
   gap: 20px;
   justify-content: center;
   align-items: center;
   justify-items: center;
   padding: 20px;
+  margin: 40px auto;
 }
